--- a/public/cadastro.html
+++ b/public/cadastro.html
@@ -39,7 +39,7 @@
 
   <div class="login">
 
-    <div class="container">
+    <div class="container banner">
       <div class="card card-cadastro">
         <h2>Bem-vindo!</h2>
         <div class="formulario">
