--- a/public/login.html
+++ b/public/login.html
@@ -41,7 +41,7 @@
 
     <div class="login">
   
-        <div class="container">
+        <div class="banner container">
             <div class="card card-login">
                 <h2>Olá de volta!</h2>
                 <div class="formulario">
