--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
   
     <div class="banner">
       <div class="container">
-        <p>Preservando <span>hoje</span> para existirem <span>amanhã</span>.</p>
+        <p>Preservando <span>hoje</span> para existirem <span>amanhã.</span></p>
       </div>
     </div>
   
@@ -45,32 +45,38 @@
       <div class="container">
         <div class="boxes">
           <div class="box">
-            <img src="../public/assets/imgs/planet-earth_color.png">
-            <h4>Missão</h4>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et, quas cupiditate asperiores provident magnam
+            <p class="textoNormal">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et, quas cupiditate asperiores provident magnam
               vitae illum iusto fugiat atque deleniti nulla sed iure suscipit, laborum, aliquid accusantium cum dicta
               minima.</p>
+              <div class="imagemTitulo">
+                <img src="../public/assets/imgs/planet-earth_color.png">
+                <h4>Missão</h4>
+              </div>
           </div>
           <div class="box">
-            <img src="../public/assets/imgs/lightbulb_color.png">
-            <h4>Visão</h4>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et, quas cupiditate asperiores provident magnam
+            <p class="textoNormal">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et, quas cupiditate asperiores provident magnam
               vitae illum iusto fugiat atque deleniti nulla sed iure suscipit, laborum, aliquid accusantium cum dicta
               minima.</p>
+              <div class="imagemTitulo">
+                <img src="../public/assets/imgs/lightbulb_color.png">
+                <h4>Visão</h4>
+              </div>
           </div>
           <div class="box">
-            <img src="../public/assets/imgs/growth_color.png">
-            <h4>Valores</h4>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et, quas cupiditate asperiores provident magnam
+            <p class="textoNormal">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et, quas cupiditate asperiores provident magnam
               vitae illum iusto fugiat atque deleniti nulla sed iure suscipit, laborum, aliquid accusantium cum dicta
               minima.</p>
+              <div class="imagemTitulo">
+                <img src="../public/assets/imgs/growth_color.png">
+                <h4>Valores</h4>
+              </div>
           </div>
         </div>
       </div>
     </div>
   
     <div class="footer">
-      <div class="container">
+      <div class="container footer-container">
         <h4>Feito com amor por aluno &hearts; SPTech &copy; 2024</h4>
         <span class="version">v1.0.0</span>
       </div>
